src/objects/Service__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PSA-CLD-USNONE - Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>PSA-CLD-USNONE - Business Unit</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DSSR</fullName>
                    <default>true</default>
                    <label>DSSR</label>
                </value>
                <value>
                    <fullName>Global Regulatory Affairs</fullName>
                    <isActive>false</isActive>
                    <label>Global Regulatory Affairs</label>
                </value>
                <value>
                    <fullName>Lifecycle Safety</fullName>
                    <isActive>false</isActive>
                    <label>Lifecycle Safety</label>
                </value>
                <value>
                    <fullName>Pharmacovigilance</fullName>
                    <isActive>false</isActive>
                    <label>Pharmacovigilance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>PSA-CLD-USNONE - Function</description>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lifecycle Safety</fullName>
                </value>
                <value>
                    <fullName>RADDS</fullName>
                </value>
                <value>
                    <fullName>Global Regulatory Affairs</fullName>
                    <isActive>false</isActive>
                    <label>Global Regulatory Affairs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Tasks_on_Deliverables__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PSA-CLD-USNONE - Sets the default flag on the Service Milestone as to whether to include the related tasks when adding a deliverable</description>
        <inlineHelpText>Sets the default flag on the Service Milestone as to whether to include the related tasks when adding a deliverable</inlineHelpText>
        <label>Include Tasks on Deliverables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <description>PSA-CLD-USNONE - Service Code</description>
        <externalId>true</externalId>
        <label>Service Code</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - Service Line</description>
        <label>Service Line</label>
        <referenceTo>Service_Line__c</referenceTo>
        <relationshipLabel>Service Lines</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>PSA-CLD-USNONE - Unit Of Measure</description>
        <label>Unit of Measure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>